--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,9 @@
   align-items: center;
   gap: 10px;
 }
+.blog-item {
+  border: solid;
+  border-radius: 2px;
+  padding: 6px;
+  margin-bottom: 14px;
+}
